--- a/functions/package.json
+++ b/functions/package.json
@@ -13,18 +13,20 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
+    "@genkit-ai/google-genai": "^1.1.0",
+    "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "@genkit-ai/google-genai": "^1.1.0",
+    "firebase-tools": "^15.0.0",
     "genkit": "^1.1.0",
-    "zod": "^3.22.4",
-    "date-fns": "^3.3.1",
     "nodemailer": "^6.9.9",
-    "cors": "^2.8.5"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "typescript": "^5.9.3"
   },
   "private": true
 }
