--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,9 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "frameworksBackend": {
+      "region": "europe-west3"
+    }
   }
 }
