--- a/package.json
+++ b/package.json
@@ -75,14 +75,17 @@
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "babel-jest": "^30.2.0",
     "genkit-cli": "^1.20.0",
     "jest": "^30.2.0",
+    "jest-environment-node": "^30.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.6",
     "typescript": "^5"
   }
 }
