--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "firebase": "^11.9.1",
     "fullcalendar": "^6.1.19",
     "genkit": "^1.20.0",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
     "next-themes": "^0.4.0",
