--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "@types/react-speech-recognition": "^3.9.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
