--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "babel-jest": "^30.2.0",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.1",
     "genkit-cli": "^1.20.0",
     "jest": "^30.2.0",
     "jest-environment-node": "^30.2.0",
