--- a/functions/package.json
+++ b/functions/package.json
@@ -29,12 +29,15 @@
     "nodemailer": "^6.9.9",
     "pdfmake": "^0.3.0",
     "pdfmake-lite": "^0.1.73",
+    "stripe": "^20.1.0",
     "twilio": "^5.11.1",
     "uuid": "^13.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/nodemailer": "^7.0.4",
     "@types/pdfmake": "^0.2.12",
+    "@types/stripe": "^8.0.416",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^5.9.3"
   },
