--- a/functions/package.json
+++ b/functions/package.json
@@ -38,7 +38,9 @@
     "@types/nodemailer": "^7.0.4",
     "@types/pdfmake": "^0.2.12",
     "@types/stripe": "^8.0.416",
+    "dotenv": "^17.2.3",
     "firebase-functions-test": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "private": true
