New: Methodology Layer

--- a/package.json
+++ b/package.json
@@ -52,12 +52,16 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
+    "docx": "^9.5.1",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "emoji-picker-react": "^4.16.1",
+    "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "fullcalendar": "^6.1.19",
     "genkit": "^1.20.0",
+    "html-to-docx": "^1.8.0",
+    "idb": "^8.0.3",
     "localforage": "^1.10.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
@@ -82,6 +86,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19.2.1",
