--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,30 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+# --- CLIENT-SIDE (Next.js) ---
+# Found in Project Settings > General > Your Apps in Firebase Console
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSy...
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1234567890
+NEXT_PUBLIC_FIREBASE_APP_ID=1:1234567890:web:abcdef123456
+
+# Stripe (Optional for Billing)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
+
+# --- SERVER-SIDE (Cloud Functions / Genkit) ---
+# Project Config
+GCLOUD_PROJECT=your-project
+GCLOUD_LOCATION=europe-west3
+
+# AI Configuration
+# If using Vertex AI (Recommended for Production):
+VERTEX_AI_PROJECT_ID=your-project
+# If using Google AI Studio (API Key):
+GOOGLE_GENAI_API_KEY=AIzaSy...
+
+# Stripe Secrets
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# --- MISC ---
+# Development Mode
+NODE_ENV=development
