--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "pilot:reset": "cd functions && npm run shell -- <<< 'seedDemoData({region: \"uk\", tenantId: \"default\"})'",
+    "pilot:clear": "cd functions && npm run shell -- <<< 'clearDemoData({region: \"uk\", tenantId: \"default\"})'",
+    "pilot:start": "concurrently \"firebase emulators:start\" \"npm run dev\""
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
@@ -65,6 +68,7 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.0",
     "patch-package": "^8.0.0",
     "pdfmake": "^0.3.0",
@@ -92,6 +96,7 @@
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
     "babel-jest": "^30.2.0",
+    "concurrently": "^9.1.2",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.1",
     "genkit-cli": "^1.20.0",
