Fix: Downgraded ESLint to v8 to fix Next.js build crash

--- a/package.json
+++ b/package.json
@@ -97,8 +97,8 @@
     "@types/react-dom": "^19.2.1",
     "babel-jest": "^30.2.0",
     "concurrently": "^9.1.2",
-    "eslint": "9.39.2",
-    "eslint-config-next": "16.1.1",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.35",
     "genkit-cli": "^1.20.0",
     "jest": "^30.2.0",
     "jest-environment-node": "^30.2.0",
