--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tiptap/extension-placeholder": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
+    "@types/leaflet": "^1.9.21",
     "@types/react-speech-recognition": "^3.9.6",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
@@ -65,6 +66,7 @@
     "genkit": "^1.20.0",
     "html-to-docx": "^1.8.0",
     "idb": "^8.0.3",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
@@ -78,6 +80,7 @@
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "react-speech-recognition": "^4.0.1",
     "recharts": "^2.15.4",
