--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "html-to-docx": "^1.8.0",
     "idb": "^8.0.3",
     "leaflet": "^1.9.4",
+    "levenshtein": "^1.0.5",
     "localforage": "^1.10.0",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
