--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/leaflet": "^1.9.21",
     "@types/react-speech-recognition": "^3.9.6",
     "browser-image-compression": "^2.0.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -94,6 +95,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
