--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc --noEmit",
     "pilot:reset": "npx tsx src/scripts/seed-pilot.ts",
     "pilot:clear": "cd functions && npm run shell -- <<< 'clearDemoData({region: \"uk\", tenantId: \"default\"})'",
-    "pilot:start": "concurrently \"firebase emulators:start\" \"npm run dev\""
+    "pilot:check": "npx tsx src/scripts/preflight-check.ts",
+    "pilot:start": "npm run pilot:check && concurrently \"firebase emulators:start\" \"npm run dev\""
   },
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
@@ -87,6 +88,7 @@
     "react-speech-recognition": "^4.0.1",
     "recharts": "^2.15.4",
     "regenerator-runtime": "^0.14.1",
+    "stripe": "^20.1.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.11.1",
