stripe integration updated

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,7 +8,7 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1234567890
 NEXT_PUBLIC_FIREBASE_APP_ID=1:1234567890:web:abcdef123456
 
 # Stripe (Optional for Billing)
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_key
 
 # --- SERVER-SIDE (Cloud Functions / Genkit) ---
 # Project Config
@@ -18,12 +18,14 @@ GCLOUD_LOCATION=europe-west3
 # AI Configuration
 # If using Vertex AI (Recommended for Production):
 VERTEX_AI_PROJECT_ID=your-project
+VERTEX_AI_LOCATION=europe-west3
+
 # If using Google AI Studio (API Key):
-GOOGLE_GENAI_API_KEY=AIzaSy...
+GOOGLE_GENAI_API_KEY=your_key
 
 # Stripe Secrets
-STRIPE_SECRET_KEY=sk_test_...
-STRIPE_WEBHOOK_SECRET=whsec_...
+STRIPE_SECRET_KEY=sk_test_your_key
+STRIPE_WEBHOOK_SECRET=whsec_your_secret
 
 # --- MISC ---
 # Development Mode
